examples/neg/namer/issue950/cannot_find_function.effekt
def main() = doesNotExist() // ERROR Cannot find a function named `doesNotExist`.
